modified:   IoTPlatform/CentriaIoTPlatformUI/CentriaIoTPlatformUI.pro 	modified:   IoTPlatform/CentriaIoTPlatformUI/centriasqlconnection.cpp 	modified:   IoTPlatform/CentriaIoTPlatformUI/centriasqlconnection.h 	modified:   IoTPlatform/CentriaIoTPlatformUI/config.ini 	new file:   IoTPlatform/CentriaIoTPlatformUI/dialogcreatehierarchyitem.cpp 	new file:   IoTPlatform/CentriaIoTPlatformUI/dialogcreatehierarchyitem.h 	new file:   IoTPlatform/CentriaIoTPlatformUI/dialogcreatehierarchyitem.ui 	deleted:    IoTPlatform/CentriaIoTPlatformUI/dialogcreateobject.cpp 	deleted:    IoTPlatform/CentriaIoTPlatformUI/dialogcreateobject.h 	deleted:    IoTPlatform/CentriaIoTPlatformUI/dialogcreateobject.ui 	new file:   IoTPlatform/CentriaIoTPlatformUI/dialogcreateobjectlink.cpp 	new file:   IoTPlatform/CentriaIoTPlatformUI/dialogcreateobjectlink.h 	new file:   IoTPlatform/CentriaIoTPlatformUI/dialogcreateobjectlink.ui 	modified:   IoTPlatform/CentriaIoTPlatformUI/mainwindow.cpp 	modified:   IoTPlatform/CentriaIoTPlatformUI/mainwindow.h 	modified:   IoTPlatform/CentriaIoTPlatformUI/mainwindow.ui

--- a/IoTPlatform/CentriaIoTPlatformUI/mainwindow.ui
+++ b/IoTPlatform/CentriaIoTPlatformUI/mainwindow.ui
@@ -26,128 +26,139 @@ QGroupBox::title {
                             }</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QLabel" name="labelObjectHierarchyName">
-    <property name="geometry">
-     <rect>
-      <x>310</x>
-      <y>40</y>
-      <width>141</width>
-      <height>18</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Name:</string>
-    </property>
-   </widget>
-   <widget class="QTreeWidget" name="treeWidgetObjectHierarchy">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>20</y>
-      <width>291</width>
-      <height>411</height>
-     </rect>
-    </property>
-    <column>
-     <property name="text">
-      <string notr="true">1</string>
-     </property>
-    </column>
-   </widget>
-   <widget class="QLineEdit" name="lineEditObjectHierarchyName">
-    <property name="geometry">
-     <rect>
-      <x>310</x>
-      <y>60</y>
-      <width>221</width>
-      <height>32</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QGroupBox" name="groupBoxObject">
-    <property name="geometry">
-     <rect>
-      <x>310</x>
-      <y>100</y>
-      <width>551</width>
-      <height>331</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">
-
-</string>
-    </property>
-    <property name="title">
-     <string>Object</string>
-    </property>
-    <widget class="QLabel" name="labelObjectName">
-     <property name="geometry">
-      <rect>
-       <x>20</x>
-       <y>30</y>
-       <width>111</width>
-       <height>18</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Object name:</string>
-     </property>
-    </widget>
-    <widget class="QLineEdit" name="lineEditObjecName">
-     <property name="geometry">
-      <rect>
-       <x>20</x>
-       <y>50</y>
-       <width>221</width>
-       <height>32</height>
-      </rect>
-     </property>
-    </widget>
-    <widget class="QTableWidget" name="tableWidget">
-     <property name="geometry">
-      <rect>
-       <x>20</x>
-       <y>90</y>
-       <width>511</width>
-       <height>221</height>
-      </rect>
-     </property>
-    </widget>
-    <widget class="QLineEdit" name="lineEditObjecUUID">
-     <property name="geometry">
-      <rect>
-       <x>310</x>
-       <y>50</y>
-       <width>221</width>
-       <height>32</height>
-      </rect>
-     </property>
-    </widget>
-    <widget class="QLabel" name="labelObjectUUID">
-     <property name="geometry">
-      <rect>
-       <x>310</x>
-       <y>30</y>
-       <width>111</width>
-       <height>18</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>UUID:</string>
-     </property>
-    </widget>
-   </widget>
-   <widget class="QTableView" name="tableViewObject">
-    <property name="geometry">
-     <rect>
-      <x>860</x>
-      <y>31</y>
-      <width>331</width>
-      <height>401</height>
-     </rect>
-    </property>
-   </widget>
+   <layout class="QHBoxLayout" name="horizontalLayout_3">
+    <item>
+     <widget class="QTabWidget" name="tabWidget">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="currentIndex">
+       <number>0</number>
+      </property>
+      <widget class="QWidget" name="tabHierarchy">
+       <attribute name="title">
+        <string>Object Hierarchy</string>
+       </attribute>
+       <layout class="QVBoxLayout" name="verticalLayout_6">
+        <item>
+         <widget class="QTreeWidget" name="treeWidgetObjectHierarchy">
+          <column>
+           <property name="text">
+            <string notr="true">1</string>
+           </property>
+          </column>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="tabObjects">
+       <attribute name="title">
+        <string>Objects</string>
+       </attribute>
+       <widget class="QTableView" name="tableViewObject">
+        <property name="geometry">
+         <rect>
+          <x>20</x>
+          <y>20</y>
+          <width>221</width>
+          <height>291</height>
+         </rect>
+        </property>
+       </widget>
+      </widget>
+     </widget>
+    </item>
+    <item>
+     <layout class="QVBoxLayout" name="verticalLayout_5">
+      <item>
+       <layout class="QVBoxLayout" name="verticalLayout_4">
+        <item>
+         <widget class="QLabel" name="labelObjectHierarchyName">
+          <property name="text">
+           <string>Name:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_2">
+          <item>
+           <widget class="QLineEdit" name="lineEditObjectHierarchyName"/>
+          </item>
+          <item>
+           <widget class="QPushButton" name="pushButtonCreateObjectLink">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="text">
+             <string>Create Object Link</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <widget class="QGroupBox" name="groupBoxObject">
+        <property name="styleSheet">
+         <string notr="true"/>
+        </property>
+        <property name="title">
+         <string>Object</string>
+        </property>
+        <layout class="QVBoxLayout" name="verticalLayout_3">
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout">
+           <item>
+            <layout class="QVBoxLayout" name="verticalLayout">
+             <item>
+              <widget class="QLabel" name="labelObjectName">
+               <property name="text">
+                <string>Object name:</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLineEdit" name="lineEditObjecName">
+               <property name="enabled">
+                <bool>false</bool>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </item>
+           <item>
+            <layout class="QVBoxLayout" name="verticalLayout_2">
+             <item>
+              <widget class="QLabel" name="labelObjectUUID">
+               <property name="text">
+                <string>UUID:</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLineEdit" name="lineEditObjecUUID">
+               <property name="enabled">
+                <bool>false</bool>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <widget class="QTableWidget" name="tableWidget"/>
+         </item>
+        </layout>
+       </widget>
+      </item>
+     </layout>
+    </item>
+   </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
