--- a/IoTPlatform/CentriaIoTPlatformUI/mainwindow.ui
+++ b/IoTPlatform/CentriaIoTPlatformUI/mainwindow.ui
@@ -36,7 +36,7 @@ QGroupBox::title {
        </sizepolicy>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tabHierarchy">
        <attribute name="title">
@@ -58,16 +58,18 @@ QGroupBox::title {
        <attribute name="title">
         <string>Objects</string>
        </attribute>
-       <widget class="QTableView" name="tableViewObject">
-        <property name="geometry">
-         <rect>
-          <x>20</x>
-          <y>20</y>
-          <width>221</width>
-          <height>291</height>
-         </rect>
-        </property>
-       </widget>
+       <layout class="QVBoxLayout" name="verticalLayout_7">
+        <item>
+         <widget class="QTableView" name="tableViewObject"/>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pushButtonCreateNewObject">
+          <property name="text">
+           <string>Create new object</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </widget>
      </widget>
     </item>
@@ -103,6 +105,9 @@ QGroupBox::title {
       </item>
       <item>
        <widget class="QGroupBox" name="groupBoxObject">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="styleSheet">
          <string notr="true"/>
         </property>
@@ -151,7 +156,7 @@ QGroupBox::title {
           </layout>
          </item>
          <item>
-          <widget class="QTableWidget" name="tableWidget"/>
+          <widget class="QTableWidget" name="tableWidgetAttributes"/>
          </item>
         </layout>
        </widget>
