modified:   IoTPlatform/CentriaIoTPlatformUI/CentriaIoTPlatformUI.pro 	modified:   IoTPlatform/CentriaIoTPlatformUI/Entities/sqlattributevalue.h 	new file:   IoTPlatform/CentriaIoTPlatformUI/Entities/sqlattributevalueparser.cpp 	new file:   IoTPlatform/CentriaIoTPlatformUI/Entities/sqlattributevalueparser.h 	modified:   IoTPlatform/CentriaIoTPlatformUI/centriasqlconnection.cpp 	modified:   IoTPlatform/CentriaIoTPlatformUI/centriasqlconnection.h 	modified:   IoTPlatform/CentriaIoTPlatformUI/dialogcreateattribute.cpp 	modified:   IoTPlatform/CentriaIoTPlatformUI/dialogcreatenewobject.cpp 	modified:   IoTPlatform/CentriaIoTPlatformUI/dialogcreatenewobject.h 	modified:   IoTPlatform/CentriaIoTPlatformUI/dialogcreateobjectlink.cpp 	modified:   IoTPlatform/CentriaIoTPlatformUI/dialogcreateobjectlink.h 	modified:   IoTPlatform/CentriaIoTPlatformUI/mainwindow.cpp 	modified:   IoTPlatform/CentriaIoTPlatformUI/mainwindow.h 	modified:   IoTPlatform/CentriaIoTPlatformUI/mainwindow.ui

--- a/IoTPlatform/CentriaIoTPlatformUI/mainwindow.ui
+++ b/IoTPlatform/CentriaIoTPlatformUI/mainwindow.ui
@@ -36,7 +36,7 @@ QGroupBox::title {
        </sizepolicy>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tabHierarchy">
        <attribute name="title">
@@ -156,7 +156,7 @@ QGroupBox::title {
           </layout>
          </item>
          <item>
-          <widget class="QTableWidget" name="tableWidgetAttributes"/>
+          <widget class="QTableView" name="tableViewAttributes"/>
          </item>
         </layout>
        </widget>
